--- a/app/code/FME/AdditionalCustomerAttributes/view/adminhtml/templates/attribute/options.phtml
+++ b/app/code/FME/AdditionalCustomerAttributes/view/adminhtml/templates/attribute/options.phtml
@@ -22,11 +22,11 @@ $currentAttributeCode = $attribute->getAttributeCode();
 
 $optionCollection = $optionCollection->addAttributeToFilter('attribute_code', $currentAttributeCode);
 $optionArr = array();
-foreach ($optionCollection as $option):
-    $item = array("id" => $option->getData('option_id'),
-                  "weight" => $option->getData('weightage'));
-    array_push($optionArr, $item);
-endforeach;
+//foreach ($optionCollection as $option):
+//    $item = array("id" => $option->getData('option_id'),
+//                  "weight" => $option->getData('weightage'));
+//    array_push($optionArr, $item);
+//endforeach;
 //var_dump($optionArr[0]['id']);exit;
 ?>
 <fieldset class="fieldset">
@@ -126,6 +126,7 @@ endforeach;
                      class="input-text
                         required-option required-unique"
                      type="text"
+                     id="<%- data.id %>"
                      <?php if ($block->getReadOnly() || $block->canManageOptionDefaultOnly()):?>
                          disabled="disabled"
                      <?php endif;?>/>
@@ -167,3 +168,11 @@ endforeach;
         }
     </script>
 </fieldset>
+<!-- custom script added for weightage values -->
+<script type="text/javascript">
+    require(['jquery','underscore','mage/url'], function($,_,urlBuilder){
+        $(document).ready(function() {
+//var_dump($optionArr[0]['id']);exit;git
+        });
+    });
+</script>
